--- a/web/styles/index-main.css
+++ b/web/styles/index-main.css
@@ -1,11 +1,4 @@
-scheme {
-    background: #1976d2;
-    background: #DDBEFB;
-    background: #2196f3;
-    background: #ff5722;
-    background: #757575;
-    background: #bdbdbd;
-}
+/*general*/
 
 html, body {
     height: 100%;
@@ -14,8 +7,18 @@ html, body {
     padding: 0;
 }
 
-#exclude_footer {
-    min-height: calc(100% - 5em);
+h1 {
+    position: absolute;
+    top: 0;
+    z-index: 2;
+}
+
+p {
+    margin: 0;
+}
+
+nav {
+    width: 50%;
 }
 
 header {
@@ -24,25 +27,27 @@ header {
     height: 12em;
 }
 
-h1 {
-    position: absolute;
-    top: 0;
-    z-index: 2;
+main {
+    display: flex;
 }
 
-#top_bg {
+footer {
+    width: 100%;
+    height: 3em;
+    background: aliceblue;
+    text-align: center;
+    padding: 1em 0;
+}
+
+/*header*/
+
+#header_bg {
     position: absolute;
     top: 0;
     z-index: 1;
 }
 
-main {
-    display: flex;
-}
-
-nav {
-    width: 50%;
-}
+/*main*/
 
 .section1 {
     padding: 20px 20px;
@@ -65,14 +70,10 @@ nav {
     font-size: 0.8em;
 }
 
-footer {
-    width: 100%;
-    height: 3em;
-    background: aliceblue;
-    text-align: center;
-    padding: 1em 0;
+/*other*/
+
+#exclude_footer {
+    min-height: calc(100% - 5em);
 }
 
-p {
-    margin: 0;
-}
+
