--- a/web/styles/index.css
+++ b/web/styles/index.css
@@ -29,6 +29,7 @@ main {
 footer {
     width: 100%;
     height: 3em;
+    font-size: 1.2em;
     background: aliceblue;
     text-align: center;
     padding: 1em 0;
@@ -68,8 +69,29 @@ footer {
 
 /*main*/
 
-main nav {
+#main_left {
     flex: 1;
+    margin-left: 2em;
+    border: 2em dimgray;
+}
+
+#article_list {
+    flex: 3;
+}
+
+#article_list ul li {
+    margin: 0;
+    padding: 0;
+}
+
+#article_list ul li p {
+    margin: 0;
+    padding: 0;
+    font-size: 1.5em;
+}
+
+#essay_list {
+    flex: 2;
 }
 
 .section1 {
