--- a/web/styles/index.css
+++ b/web/styles/index.css
@@ -1,11 +1,30 @@
 /*general*/
 
-html, body {
+html {
     height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
     font-size: 10px
+}
+
+body {
+    background: #F5F6FB;
+}
+
+#top_content {
+    display: flex;
+    width: 100%;
+    height: 10em;
+    background: white;
+    align-items: center;
+}
+
+#top_avatar {
+    margin-top: 14px;
+    height: 72px;
+    width: 72px;
+    font-size: 2em;
 }
 
 p {
