--- a/web/styles/common-body-header-main.css
+++ b/web/styles/common-body-header-main.css
@@ -25,19 +25,16 @@ header {
     width: 1200px;
     height: 100px; /*用父容器header     align-content: center 无效*/
     margin: auto;
+    align-items: center;
 }
 
 #top_avatar {
     height: 72px;
     width: 72px;
-    margin-top: auto;
-    margin-bottom: auto;
 }
 
 #top_name {
     margin-left: 10px;
-    margin-top: auto;
-    margin-bottom: auto;
 }
 
 #top_nav {
