--- a/web/styles/summary-list.css
+++ b/web/styles/summary-list.css
@@ -30,19 +30,18 @@ section {
     margin-top: 20px;
 }
 
-.section_title {
+.article_title {
     color: #111111;
     font-size: 20px;
-
 }
 
-.section_describe {
+.article_summary {
     color: #555555;
     font-size: 14px;
-    flex-grow: 1
+    flex-grow: 1;
 }
 
-.section_time {
+.article_time {
     color: #999999;
     font-size: 14px;
 }
