feat: 处理摘要换行，修正标题获取
Signed-off-by: lishengjie <416756910@qq.com>

--- a/web/styles/summary-list.css
+++ b/web/styles/summary-list.css
@@ -39,6 +39,8 @@ section {
     color: #555555;
     font-size: 14px;
     flex-grow: 1;
+    margin-top: 8px;
+    margin-bottom: 12px;
 }
 
 .article_time {
