--- a/web/styles/marked.css
+++ b/web/styles/marked.css
@@ -2,13 +2,16 @@ blockquote{
     font: 14px/22px normal helvetica, sans-serif;
     margin-top: 10px;
     margin-bottom: 10px;
-    padding-left: 15px;
-    padding-top: 10px;
-    padding-right: 10px;
-    padding-bottom: 10px;
+    padding: 10px 10px 10px 15px;
     border-left: 3px solid #ccc;
     background-color:#f1f1f1;
     margin-inline-start:0;
+}
+
+pre > code {
+    display: block;
+    background-color:#f1f1f1;
+    padding: 10px 10px 10px 15px;
 }
 
 code{
